--- a/tc-rannstein-app/package.json
+++ b/tc-rannstein-app/package.json
@@ -14,9 +14,12 @@
     "@types/node": "^16.18.11",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
+    "i18next": "^22.4.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^12.1.4",
     "react-scripts": "5.0.1",
+    "react-simple-chatbot": "^0.6.1",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
