--- a/tc-rannstein-app/package.json
+++ b/tc-rannstein-app/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.1.4",
+    "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
     "react-simple-chatbot": "^0.6.1",
     "typescript": "^4.9.4",
